--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ environment:
           CONAN_VISUAL_VERSIONS: 12
           CONAN_BUILD_TYPES: Release
        
-before_build:
+before_test:
   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
