--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,5 +23,5 @@ test_script:
   - python build.py
 
 on_finish:
-  - ps: $env.path.split(';')
+  - ps: $env:path.split(';')
  #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
