--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,8 @@ environment:
           CONAN_VISUAL_VERSIONS: 12
           CONAN_BUILD_TYPES: Release
        
-#before_test:
+before_test:
+  - ps: $env:path.split(';')
  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
@@ -22,6 +23,6 @@ install:
 test_script:
   - python build.py
 
-on_finish:
-  - ps: $env:path.split(';')
+#on_finish:
+  
  #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
