--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,7 @@ environment:
           CONAN_BUILD_TYPES: Release
        
 before_test:
-  - ps: $env:path.split(';')
- # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
